# distributive

./: .gitmodules  .hlint.yaml  .project-settings.yml  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  Data-Distributive-Generic.html  Data-Distributive.html  LICENSE  README.markdown  Setup.lhs  cabal.haskell-ci  cabal.project  distributive.cabal  distributive.haddock  doc-index.html  index-frames.html  index.html  mini_Data-Distributive-Generic.html  mini_Data-Distributive.html  stack.yaml
.github/workflows/: haskell-ci.yml
Data/: Distributive.hs
distributive/: LICENSE.md  distributive.cabal
distributive/src/: Trustworthy.hs
distributive/src/Control/Comonad/Rep/: Store.hs
distributive/src/Control/Monad/Rep/: Reader.hs  State.hs
distributive/src/Data/: Distributive.hs  Rep.hs
distributive/src/Data/HKD/: Index.hs  Variant.hs
distributive/src/Data/Machine/: Mealy.hs  Moore.hs
distributive/src/Data/Profunctor/: Closed.hs  Mapping.hs  Rep.hs  Sieve.hs
distributive/src/Data/Rep/: Coyoneda.hs  Internal.hs
distributive/src/Data/Vec/: Internal.hs
distributive/src/Numeric/: Fin.hs
distributive/src/Numeric/Fin/: Internal.hs
hkd/: CHANGELOG.md  LICENSE.md  README.md  hkd.cabal
hkd/example/: NP.hs  Record.hs
hkd/src/Data/: HKD.hs
hkd/src/Data/Function/: Coerce.hs
hkd/src/Data/HKD/: Classes.hs  Contravariant.hs  Orphans.hs  Profunctor.hs
hkd/src/Data/HKD/Index/: Internal.hs
hkd/src/Data/HKD/Profunctor/: Unsafe.hs
hkd/src/Data/Traversable/: Confusing.hs
make/: LICENSE.md  Makefile  README.md  make.cabal
make/src/: Make.hs
make/src/Control/: Make.hs
numeric-fin/: CHANGELOG.md  README.md  numeric-fin.cabal
numeric-fin/src/Numeric/: Fin.hs
numeric-fin/src/Numeric/Fin/: Internal.hs
src/: Data-Distributive-Generic.html  Data-Distributive.html  Trustworthy.hs
src/Control/Comonad/Rep/: Store.hs
src/Control/Monad/Distributive/: Reader.hs  State.hs
src/Control/Monad/Rep/: Reader.hs  State.hs
src/Control/Monad/Representable/: Reader.hs  State.hs
src/Data/: Distributive.hs  Fin.hs  HKD.hs  Rep.hs  Vec.hs
src/Data/Distributive/: Coerce.hs  Coyoneda.hs  Endo.hs  Fin.hs  Generic.hs  Internal.hs  Orphans.hs  Unsafe.hs  Util.hs  Vec.hs
src/Data/Distributive/Internal/: Coerce.hs  Fin.hs  Orphans.hs  Vec.hs
src/Data/Fin/: Internal.hs
src/Data/Function/: Coerce.hs
src/Data/Functor/: Confusing.hs  Rep.hs  Vec.hs
src/Data/Functor/Rep/: Coyoneda.hs  Endo.hs  Internal.hs
src/Data/Functor/Rep/Internal/: Coerce.hs  Orphans.hs
src/Data/Functor/Vec/: Internal.hs
src/Data/HKD/: Classes.hs  Contravariant.hs  Distributive.hs  Divisible.hs  Orphans.hs  Record.hs  Rep.hs  Types.hs  Variant.hs  WithIndex.hs
src/Data/HKD/Contravariant/: Divisible.hs
src/Data/HKD/Distributive/: Endo.hs  Record.hs
src/Data/HKD/Distributive/Internal/: Fin.hs  Index.hs  Record.hs  Vec.hs
src/Data/HKD/Index/: Internal.hs
src/Data/HKD/Internal/: Index.hs  Record.hs
src/Data/HKD/Record/: Internal.hs
src/Data/HKD/Rep/: Endo.hs
src/Data/Machine/: Mealy.hs  Moore.hs
src/Data/Machine/Distributive/: Moore.hs
src/Data/Profunctor/: Closed.hs  Mapping.hs  Rep.hs
src/Data/Rep/: Coerce.hs  Coyoneda.hs  Endo.hs  Internal.hs  Orphans.hs
src/Data/Vec/: Internal.hs
tests/: GenericsSpec.hs  doctests.hs
typed-keys/: LICENSE.md  README.md  typed-keys.cabal
typed-keys/src/Data/Type/Coercion/: Key.hs
typed-keys/src/Data/Type/Equality/: Key.hs
