name:          distributive
category:      Data Structures
version:       0.5
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/distributive/
bug-reports:   http://github.com/ekmett/distributive/issues
copyright:     Copyright (C) 2011-2014 Edward A. Kmett
synopsis:      Distributive functors -- Dual to Traversable
description:   Distributive functors -- Dual to Traversable
build-type:    Custom
extra-source-files:
  .travis.yml
  .vim.custom
  config
  travis-cabal-apt-install
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/distributive.git

flag lib-Werror
  manual: True
  default: False
  description:
    When enabled any warning during the build process will result in a failure. This is useful in buildbot configurations, but should
    not be used during normal day-to-day use.

flag tagged
  manual: True
  default: True
  description:
    You can disable the use of the `tagged` package using `-f-tagged`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.

library
  build-depends:
    base                >= 4   && < 5,
    transformers        >= 0.2 && < 0.6,
    transformers-compat >= 0.3 && < 1

  hs-source-dirs:  src
  exposed-modules:
    Data.Distributive

  if impl(ghc>=7.2)
    exposed-modules: Data.Distributive.Generic

  if flag(tagged)
    build-depends: tagged >= 0.7 && < 1

  if impl(ghc>=7.4 && < 7.6)
    build-depends: ghc-prim

  if flag(lib-Werror)
    ghc-options: -Werror
  else
    ghc-options: -Wall

-- Verify the results of the examples
test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends:
    base      >= 4,
    directory >= 1.0,
    doctest   >= 0.9.1,
    filepath  >= 1.2
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
