name:          distributive
category:      Data Structures
version:       1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/distributive/
bug-reports:   http://github.com/ekmett/distributive/issues
copyright:     Copyright 2011-2021 Edward A. Kmett,
               Copyright 2017-2021 Aaron Vargo,
               Copyright 2021 Oleg Grenrus
synopsis:      Distributive functors -- Dual to Traversable
description:   Distributive functors -- Dual to @Traversable@
build-type:    Simple
tested-with:
  GHC == 8.2.2,
  GHC == 8.4.4,
  GHC == 8.6.5,
  GHC == 8.8.4,
  GHC == 8.10.3
extra-source-files:
  .hlint.yaml
  .vim.custom
  config
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/distributive.git

flag semigroups
  manual: True
  default: True
  description:
    You can disable the use of the `semigroups` package using `-f-semigroups` when compiling on versions of GHC < 8.0.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.

flag tagged
  manual: True
  default: True
  description:
    You can disable the use of the `tagged` package using `-f-tagged`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.

library
  build-depends:
    base         >= 4.10 && < 5,
    base-orphans >= 0.5.2 && < 1,
    ghc-prim,
    indexed-traversable >= 0.1 && < 0.2,
    mtl          >= 2.2 && < 2.3,
    some         >= 1.0 && < 1.1,
    transformers >= 0.3 && < 0.6

  hs-source-dirs:  src
  other-modules:
    Data.Distributive.Coerce
    Data.Distributive.Util
  exposed-modules:
    Data.Distributive
    Data.Distributive.Coyoneda
    Data.Distributive.Endo
    Data.Distributive.Orphans
    Data.Functor.Confusing
    Data.HKD
    Data.HKD.Distributive
    Data.HKD.Distributive.Endo
    Data.HKD.WithIndex
    Data.Machine.Moore
    Control.Monad.Distributive.Reader
    Control.Monad.Distributive.State
  --                 Data.Machine.Distributive.Moore

  if flag(tagged)
    build-depends: tagged >= 0.7 && < 1

  if impl(ghc>=7.2 && < 7.6)
    build-depends: ghc-prim

  if impl(ghc < 8.0)
    if flag(semigroups)
      build-depends: semigroups >= 0.13 && < 1

  if impl(ghc < 8.5)
    build-depends: contravariant >= 1.5.3 && < 1.6

  ghc-options: -Wall

  if impl(ghc >= 9.0)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode

  default-language: Haskell2010

test-suite spec
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    base             >= 4    && < 5,
    distributive,
    generic-deriving >= 1.11 && < 2,
    hspec            >= 2    && < 3

  main-is: Spec.hs
  other-modules: GenericsSpec

  ghc-options: -Wall -threaded -rtsopts
  default-language: Haskell2010
