cabal-version: 2.4
name:          distributive
category:      Data Structures
version:       1
license:       BSD-2-Clause OR Apache-2.0
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/distributive/
bug-reports:   http://github.com/ekmett/distributive/issues
copyright:     Copyright 2011-2021 Edward A. Kmett,
               Copyright 2017-2021 Aaron Vargo,
               Copyright 2021 Oleg Grenrus
synopsis:      Distributive functors
description:   Distributive functors.
tested-with:
  GHC == 8.6.5,
  GHC == 8.8.4,
  GHC == 8.10.3
extra-source-files:
  .hlint.yaml
  .vim.custom
  config
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/distributive.git

flag tagged
  manual: True
  default: True
  description:
    You can disable the use of the `tagged` package using `-f-tagged`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.

library
  build-depends:
    base         >= 4.10 && < 5,
    base-orphans >= 0.5.2 && < 1,
    contravariant >= 1.5.3 && < 1.6,
    ghc-prim,
    indexed-traversable >= 0.1 && < 0.2,
    mtl          >= 2.2 && < 2.3,
    some         >= 1.0 && < 1.1,
    transformers >= 0.3 && < 0.6,
    vector       >= 0.12 && < 0.13

  hs-source-dirs:  src
  exposed-modules:
    Data.Functor.Rep
    Data.Functor.Rep.Coyoneda
    Data.Functor.Rep.Endo
    Data.Functor.Rep.Internal
    Data.Functor.Rep.Internal.Coerce
    Data.Functor.Rep.Internal.Orphans
    Data.Fin
    Data.Fin.Internal
    Data.Functor.Vec
    Data.Functor.Vec.Internal
    Data.Functor.Confusing
    Data.HKD
    Data.HKD.Contravariant
    Data.HKD.Rep
    Data.HKD.Rep.Endo
    Data.HKD.Index
    Data.HKD.Index.Internal
    Data.HKD.Record
    Data.HKD.Record.Internal
    Data.HKD.Variant
    Data.HKD.WithIndex
    Data.Machine.Moore
    Control.Monad.Rep.Reader
    Control.Monad.Rep.State
  -- Data.Machine.Rep.Moore

  if flag(tagged)
    build-depends: tagged >= 0.7 && < 1

  ghc-options: -Wall -fexpose-all-unfoldings -fspecialize-aggressively

  if impl(ghc >= 9.0)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode

  default-language: Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    EmptyCase
    ExistentialQuantification
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    NoStarIsType
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    UndecidableSuperClasses
    ViewPatterns

  other-extensions:
    CPP
    GeneralizedNewtypeDeriving
    Safe
    Trustworthy
    Unsafe
    UnboxedTuples

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    base             >= 4    && < 5,
    distributive,
    generic-deriving >= 1.11 && < 2,
    hspec            >= 2    && < 3

  main-is: Spec.hs
  other-modules: GenericsSpec
  ghc-options: -Wall -threaded -rtsopts
  default-language: Haskell2010
