cabal-version:   2.2
name:            hkd
version:         0.2
synopsis:        "higher-kinded data"
description:
  "Higher-kinded data" utilities, e.g.
  .
  @
  class FFunctor t where
  \    ffmap :: (f ~> g) -> t f -> t g
  @
  .
  and other classes and types.
  .
  /Note:/ this package is experimental.
  .
  /See also:/ @distributive@.

homepage:        https://github.com/ekmett/distributive/tree/main/hkd#readme
license:         BSD-2-Clause OR Apache-2.0
license-file:    LICENSE.md
author:          Edward Kmett <ekmett@gmail.com>
maintainer:      Edward Kmett <ekmett@gmail.com>
copyright:       (c) 2019-2021 Edward Kmett
                 (c) 2019-2021, Oleg Grenrus
                 (c) 2021 Aaron Vargo
category:        Data Structures
build-type:      Simple
extra-doc-files:
  README.md
  CHANGELOG.md

tested-with:
  GHC == 8.6.5,
  GHC == 8.8.4,
  GHC == 8.10.3,
  GHC == 9.0.1

source-repository head
  type:     git
  location: git://github.com/ekmett/distributive.git
  subdir:   hkd

common base
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    EmptyCase
    ExistentialQuantification
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    NoStarIsType
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    UndecidableSuperClasses
    ViewPatterns

  other-extensions:
    CPP
    GeneralizedNewtypeDeriving
    Safe
    Trustworthy
    Unsafe
    UnboxedTuples

library
  import: base

  hs-source-dirs: src

  other-modules:
    Data.HKD.Orphans
    Data.Traversable.Confusing

  exposed-modules:  
    Data.HKD
    Data.HKD.Classes
    Data.HKD.Contravariant
    Data.HKD.Index
    Data.HKD.Index.Internal
    Data.Function.Coerce

  ghc-options: -Wall -fexpose-all-unfoldings -fspecialize-aggressively

  if impl(ghc >=8.0)
    ghc-options: -Wno-trustworthy-safe

  if impl(ghc >=8.4)
    ghc-options:
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -Wmissing-export-lists

  if impl(ghc >= 9.0)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode

  build-depends:
    , base >=4.10 && <4.16
    , base-orphans >= 0.5.2 && < 1
    , contravariant ^>= 1.5.3
    , dependent-hashmap ^>= 0.1
    , dependent-sum ^>= 0.7.1
    , ghc-prim
    , hashable ^>= 1.3
    , indexed-traversable ^>= 0.1
    , mtl ^>= 2.2
    , numeric-fin ^>= 0
    , some ^>= 1
    , tagged >= 0.7 && < 1
    , transformers ^>= 0.5

test-suite example-np
  import: base
  type:             exitcode-stdio-1.0
  hs-source-dirs:   example
  main-is:          NP.hs
  build-depends:
    , base
    , some
    , hkd

test-suite example-record
  import: base
  type:             exitcode-stdio-1.0
  hs-source-dirs:   example
  main-is:          Record.hs
  build-depends:
    , base
    , some
    , hkd
