cabal-version: 2.4
name:          numeric-fin
category:      Numeric
version:       0
license:       BSD-2-Clause OR Apache-2.0
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/distributive/
bug-reports:   http://github.com/ekmett/distributive/issues
copyright:     Copyright 2021 Edward A. Kmett,
synopsis:      efficient small finite numbers
description:   efficient small finite numbers.

tested-with:
  GHC == 8.6.5,
  GHC == 8.8.4,
  GHC == 8.10.3
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: git://github.com/ekmett/distributive.git
  subdir: numeric-fin

library
  default-language: Haskell2010
  build-depends:
    , base >= 4.10 && < 5
    , some ^>= 1
    , template-haskell
  hs-source-dirs: src

  -- numeric-fin
  exposed-modules:
    Numeric.Fin
    Numeric.Fin.Internal

  ghc-options: -Wall -fexpose-all-unfoldings -fspecialize-aggressively

  if impl(ghc >= 9.0)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode

