cabal-version: 3.4
name: typed-keys
version: 0
synopsis: value-level witnesses of type equality
description: The Key monad: type-safe unconstrained dynamic typing
homepage: https://github.com/ekmett/haskell
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2020 Edward Kmett
stability: experimental
category: Data Structures
build-type: Simple
extra-doc-files: README.md, CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/haskell
  subdir: keyholes

library
  default-language: Haskell2010
  build-depends: base >= 4.14 && < 5, data-default
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends:
    , base
    , hkd ^>= 0.2
    , primitive ^>= 0.7
    , some ^>= 1.0.2
  hs-source-dirs: src
  exposed-modules:
    Data.Type.Coercion.Key
    Data.Type.Equality.Key
